feat: add event_key for identification of events at parse time in events service
In the previous approach, there was no way of telling the events-service what event within properties to parse.

The addition of event key will allow the events service to know how to parse the contents of the properties object
